Fix content jumping on flip

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 }
 
 body {
+  max-width: 100%;
+  overflow: hidden;
   background-color: #f8f5f2;
   perspective: 600px;
 }
